--- a/game002-slizzle/style.css
+++ b/game002-slizzle/style.css
@@ -50,28 +50,6 @@ body {
   background-size: calc(var(--size) * 100%) calc(var(--size) * 100%);
   vertical-align: bottom;
 
-  /* row 2 */
-  /* ((row - 1) * tiles + 1) (row * tiles) */
-  &:nth-child(n + 4):nth-child(-n + 6) {
-    /* 100% / (tiles - 1) ...? */
-    background-position-y: 50%;
-  }
-
-  /* row 3 */
-  &:nth-child(n + 7):nth-child(-n + 9) {
-    background-position-y: 100%;
-  }
-
-  /* col 2 */
-  &:nth-child(3n-1) {
-    background-position-x: 50%;
-  }
-
-  /* col 3 */
-  &:nth-child(3n-0) {
-    background-position-x: 100%;
-  }
-
   &.row-1 {
     grid-row: 1;
   }
@@ -183,4 +161,94 @@ input:is([type='checkbox'], [type='radio']) {
 #frame:has(#tile-nums:not(:checked)) .tile {
   color: transparent;
   text-shadow: none;
+}
+
+#settings:has([name='size'][value='3']:checked) ~ #game .tile {
+  /* row 2 */
+  &:nth-child(n + 4):nth-child(-n + 6) {
+    background-position-y: 50%;
+  }
+
+  /* row 3 */
+  &:nth-child(n + 7):nth-child(-n + 9) {
+    background-position-y: 100%;
+  }
+
+  /* col 2 */
+  &:nth-child(3n-1) {
+    background-position-x: 50%;
+  }
+
+  /* col 3 */
+  &:nth-child(3n-0) {
+    background-position-x: 100%;
+  }
+}
+
+#settings:has([name='size'][value='4']:checked) ~ #game .tile {
+  /* row 2 */
+  &:nth-child(n + 5):nth-child(-n + 8) {
+    background-position-y: 33.333333%;
+  }
+  /* row 3 */
+  &:nth-child(n + 9):nth-child(-n + 12) {
+    background-position-y: 66.666666%;
+  }
+  /* row 4 */
+  &:nth-child(n + 13):nth-child(-n + 16) {
+    background-position-y: 100%;
+  }
+
+  /* ------ */
+
+  /* col 2 */
+  &:nth-child(4n-2) {
+    background-position-x: 33.333333%;
+  }
+  /* col 3 */
+  &:nth-child(4n-1) {
+    background-position-x: 66.666666%;
+  }
+  /* col 4 */
+  &:nth-child(4n-0) {
+    background-position-x: 100%;
+  }
+}
+
+#settings:has([name='size'][value='5']:checked) ~ #game .tile {
+  /* row 2 */
+  &:nth-child(n + 6):nth-child(-n + 10) {
+    background-position-y: 25%;
+  }
+  /* row 3 */
+  &:nth-child(n + 11):nth-child(-n + 15) {
+    background-position-y: 50%;
+  }
+  /* row 4 */
+  &:nth-child(n + 16):nth-child(-n + 20) {
+    background-position-y: 75%;
+  }
+  /* row 5 */
+  &:nth-child(n + 21):nth-child(-n + 25) {
+    background-position-y: 100%;
+  }
+
+  /* ------ */
+
+  /* col 2 */
+  &:nth-child(5n-3) {
+    background-position-x: 25%;
+  }
+  /* col 3 */
+  &:nth-child(5n-2) {
+    background-position-x: 50%;
+  }
+  /* col 4 */
+  &:nth-child(5n-1) {
+    background-position-x: 75%;
+  }
+  /* col 5 */
+  &:nth-child(5n-0) {
+    background-position-x: 100%;
+  }
 }
