--- a/game002-slizzle/src/style.css
+++ b/game002-slizzle/src/style.css
@@ -25,7 +25,7 @@ body {
 #frame {
   position: relative;
   margin-inline: auto;
-  width: min-content;
+  width: clamp(300px, 50vw, 512px);
   border-radius: 1em;
   border-width: 1em;
   border-style: solid;
@@ -46,7 +46,6 @@ body {
 
 .tile {
   aspect-ratio: 1;
-  width: clamp(32px, 50vw, calc(512px / var(--size)));
   color: var(--melon-6);
   text-shadow: 2px 2px 1px var(--melon-7);
   background-image: url(../assets/Copilot_20251111_213521.png);
